--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <title>Primi passi col DOM</title>
 </head>
 <body>
-    
+    <section class="h-100">
+        <h1>Gioco lampadina ON/OFF</h1>
+    </section>
+    <section class="bg-dark">
+        <div class="container">
+            <img src="img/white_lamp.png" alt="lamp-off">
+            <button id="onOffButton">Accendi/Spegni</button>
+        </div>
+    </section>
 
     <script src="script/script.js"></script>
 </body>
